@@ -1,6 +1,7 @@
 Revision history for Perl extension PGXN-Meta-Validator.
 
 0.16.0
+      - Updated GitHub URLs to point to `/pgxn/` rather than `/theory/`.
 
 0.15.0  2011-11-28T04:30:09Z
       - Added `version_string` class method and made use of it in the
